--- a/rag_pipeline.ipynb
+++ b/rag_pipeline.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Six stories are in the collection.\n"
+      "There are six new stories in the collection.\n"
      ]
     }
    ],
@@ -17,6 +17,8 @@
     "# Import necessary libraries\n",
     "from dotenv import load_dotenv\n",
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
+    "from llama_index.core.query_engine import RetrieverQueryEngine\n",
+    "from llama_index.core.retrievers import VectorIndexRetriever\n",
     "\n",
     "# Load environment variables\n",
     "load_dotenv()\n",
@@ -24,11 +26,14 @@
     "# Load documents from a directory (you can change this path as needed)\n",
     "documents = SimpleDirectoryReader(\"data\").load_data()\n",
     "\n",
-    "# Create an index from the documents\n",
+    "# Create index\n",
     "index = VectorStoreIndex.from_documents(documents)\n",
     "\n",
-    "# Create a query engine\n",
-    "query_engine = index.as_query_engine()\n",
+    "# Create retriever\n",
+    "retriever = VectorIndexRetriever(index=index)\n",
+    "\n",
+    "# Create query engine\n",
+    "query_engine = RetrieverQueryEngine(retriever=retriever)\n",
     "\n",
     "# Example query\n",
     "response = query_engine.query(\"How many stories are there in the collection?\")\n",
